# k2

./: CMakeLists.txt  README.md  get_version.py  setup.py
.github/workflows/: build-doc.yml  build-rocm-ubuntu.yml  macos-cpu-wheels.yml  ubuntu-arm64-cpu-wheels.yml  ubuntu-cpu-wheels.yml  ubuntu-cuda-wheels.yml  windows-x64-cpu-wheels.yml
cmake/: torch.cmake
docs/source/: .gitignore
docs/source/installation/: from_source.rst  from_wheels.rst  index.rst
k2/: CMakeLists.txt
k2/csrc/: CMakeLists.txt  array_ops.cu  array_ops_inl.h  cub.h  cuda_to_hip.h  eval.h  fsa_utils.cu  hash.h  intersect.cu  log.h  macros.h  math.cu  moderngpu.h  moderngpu_allocator_hip.cu  moderngpu_shim.h  nvtx_test.cu  pytorch_context.cu  pytorch_context_test.cu  ragged.cu  ragged.h  ragged_ops.cu  ragged_ops_inl.h  rand.cu  utils.h  version.h.in
k2/csrc/cudpp/: cudpp_hip.cu
k2/python/csrc/: CMakeLists.txt  version.cu
k2/python/csrc/torch/: CMakeLists.txt  mutual_information_cuda.cu  ragged.cu
k2/python/k2/version/: version.py
scripts/github_actions/: build-ubuntu-cpu-arm64.sh  build-ubuntu-cpu.sh  build-ubuntu-cuda.sh  build-ubuntu-rocm.sh  generate_build_matrix.py  install_torch.sh
